# loregui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml
.cargo/: config.toml
.claude/skills/loregui/: SKILL.md
.github/workflows/: auto-release.yml  ci.yml  integration.yml  licenses.yml  publish-vscode.yml  release.yml  upstream-parity.yml  vscode-test.yml  windows-build.yml
crates/lore-vm/: Cargo.toml
crates/lore-vm/src/: api.rs  backend.rs  cli_backend.rs  client_backend.rs  collect.rs  dispatch.rs  error.rs  global.rs  lib.rs  model.rs
crates/lore-vm/src/ops/auth/: clear.rs  list.rs  local_user_info.rs  login_with_token.rs
crates/lore-vm/src/ops/branch/: archive.rs  create.rs  diff.rs  info.rs  latest_list.rs  merge_abort.rs  merge_into.rs  merge_resolve.rs  merge_resolve_mine.rs  merge_resolve_theirs.rs  merge_restart.rs  merge_unresolve.rs  metadata_clear.rs  metadata_get.rs  metadata_set.rs  protect.rs  push.rs  reset.rs  switch.rs  unprotect.rs
crates/lore-vm/src/ops/dependency/: dependency_add.rs  dependency_list.rs  dependency_remove.rs
crates/lore-vm/src/ops/file/: diff.rs  dirty.rs  dirty_copy.rs  dirty_move.rs  dump.rs  hash.rs  history.rs  info.rs  metadata_clear.rs  metadata_get.rs  metadata_list.rs  metadata_set.rs  obliterate.rs  reset.rs  reset_to_last_merged.rs  stage.rs  stage_merge.rs  stage_move.rs  unstage.rs  write.rs
crates/lore-vm/src/ops/layer/: layer_add.rs  layer_list_staged.rs  layer_remove.rs
crates/lore-vm/src/ops/link/: add.rs  list.rs  list_staged.rs  remove.rs  update.rs
crates/lore-vm/src/ops/lock/: file_acquire.rs  file_acquire_as_owner.rs  file_message_send.rs  file_query.rs  file_release.rs  file_status.rs  mod.rs
crates/lore-vm/src/ops/notification/: subscribe.rs  unsubscribe.rs
crates/lore-vm/src/ops/repository/: clone.rs  config_get.rs  create.rs  dump.rs  flush.rs  gc.rs  list.rs  metadata_clear.rs  metadata_get.rs  metadata_set.rs  repository_update_path.rs  status.rs  store_immutable_query.rs  verify_fragment.rs  verify_state.rs
crates/lore-vm/src/ops/revision/: activity_report.rs  cherry_pick_abort.rs  cherry_pick_local.rs  cherry_pick_resolve.rs  cherry_pick_resolve_mine.rs  cherry_pick_resolve_theirs.rs  cherry_pick_unresolve.rs  commit.rs  commit_with_metadata.rs  diff.rs  find.rs  find_local.rs  history.rs  info.rs  metadata_clear.rs  metadata_get.rs  metadata_list.rs  metadata_set.rs  mod.rs  revert.rs  revert_abort.rs  revert_resolve.rs  revert_resolve_mine.rs  revert_resolve_theirs.rs  revert_restart.rs  revert_unresolve.rs
crates/lore-vm/src/ops/service/: start.rs
crates/lore-vm/src/ops/shared_store/: create.rs  info.rs  set_use_automatically.rs
crates/lore-vm/src/ops/storage/: close.rs  get.rs  get_file.rs  obliterate.rs  put.rs  put_file.rs  upload.rs
crates/lore-vm/tests/: auth_clear.rs  auth_local_user_info.rs  auth_login_with_token.rs  branch_create.rs  branch_info.rs  branch_latest_list.rs  branch_merge_resolve_mine.rs  branch_merge_resolve_theirs.rs  branch_metadata_clear.rs  branch_metadata_set.rs  dependency_ops.rs  file_info.rs  file_metadata_clear.rs  integration_roundtrip.rs  layer_list_staged.rs  link_list.rs  lock_file_acquire.rs  notification_subscribe.rs  notification_unsubscribe.rs  repository_create_with_metadata.rs  repository_flush.rs  repository_gc.rs  repository_metadata_set.rs  repository_store_immutable_query.rs  repository_verify_fragment.rs  resolve_user_info.rs  revision_cherry_pick_resolve_mine.rs  revision_find_local.rs  revision_history.rs  stage_real_flow.rs  storage_disk_roundtrip.rs  storage_obliterate_copy_errors.rs  storage_remote_backend.rs  storage_shared_store_sync.rs
crates/lore-vm/tests/storage_support/: mod.rs
crates/lorevm-cli/: Cargo.toml
crates/lorevm-cli/src/: main.rs
crates/lorevm-cli/tests/: branch_ops.rs  cli_plumbing.rs  lock_offline.rs  repo_lifecycle.rs
crates/lorevm-cli/tests/harness/: mod.rs
crates/lorevm-ffi/: Cargo.toml
crates/lorevm-ffi/src/: lib.rs
crates/lorevm-ffi/tests/: smoke.rs
docs/: COMMERCIAL-ADDONS.md  IMPLEMENTATION-PLAN.md  INFORMATION-ARCHITECTURE.md  dam-embedding-decision.md  dam-studiobrain-integration-spike.md  lock-messaging-spike.md  ue-lorevm-bridge-spike.md
docs/adr/: 0001-studiobrain-lore-federation.md  0002-ew0-cloud-write-facade-spike.md  0003-ew-write-track-risk-register.md
docs/assets/screenshots/: README.md
docs/domains/: storage.md
frontend/: package-lock.json  package.json
frontend/public/licenses/: frontend.md  rust.md
frontend/scripts/: command-registration.mjs  gen-third-party-licenses.mjs  palette-parity-allowlist.json  visual-test.mjs
frontend/src/: App.spec.tsx  App.tsx  BranchesPanel.tsx  ErrorBoundary.tsx  HistoryPanel.tsx  LocksPanel.tsx  ReportingPanel.tsx  RepositoryPanel.tsx  SettingsPanel.tsx  StoragePanel.tsx  api.ts  main.tsx  styles.css  update.ts
frontend/src/commercial/: entitlement.test.ts  entitlement.ts  license.ts  relay-registry.ts
frontend/src/content/: ContentWorkspace.tsx
frontend/src/locks/: LockInbox.tsx  LockRequestButton.tsx
frontend/src/onboarding/: ClientClone.tsx  ClientConnect.tsx  ModeSelect.tsx  OnboardingFlow.tsx
frontend/src/palette/: types.ts
frontend/src/theme/: ThemeProvider.tsx  bridge.spec.tsx  bridge.ts  theme.ts
scripts/: gen-licenses.sh  upstream-lore-parity.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  desktop.rs  lan_discovery.rs  lib.rs  main.rs  server_host.rs  settings.rs  tray.rs
src-tauri/src/operations/: mod.rs  subscribe.rs  unsubscribe.rs
unreal-plugin/LoreSourceControl/: LoreSourceControl.uplugin  README.md
unreal-plugin/LoreSourceControl/Config/: FilterPlugin.ini
vscode-extension/: .gitignore  LICENSE.txt  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  lorevmClient.ts
website/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
website/scripts/: generate-op-docs.mjs  generate-op-reference.mjs
(+172 files in other folders)
