[package]
name = "loregui"
description = "A cross-platform desktop GUI for the Lore version-control system."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "loregui"

[lib]
name = "loregui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lore-vm = { path = "../crates/lore-vm" }

[features]
# Forward to lore-vm so the whole app can switch backends from one flag.
# Default to the in-process backend: no `lore` CLI subprocess required.
default = ["client-backend"]
cli-backend = ["lore-vm/cli-backend"]
client-backend = ["lore-vm/client-backend"]
