[package]
name = "lore-vm"
description = "Reusable view-model core over the Lore VCS client. GUI-agnostic; consumed by loregui (standalone) and StudioBrain's desktop app."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lore = { workspace = true }

[features]
# In-process binding to the upstream `lore` engine via the ops/ layer. This is
# the shipped default: the app is fully self-contained and never shells out to a
# `lore` CLI binary. See src/client_backend.rs.
default = ["client-backend"]
# Shell out to the `lore` CLI. Kept available for environments that prefer a
# subprocess against an installed `lore` binary, but no longer the default.
cli-backend = []
# Bind the upstream `lore` engine in-process (no subprocess) through the ops/
# layer. The shipped path — what StudioBrain's desktop app uses. See
# src/client_backend.rs.
client-backend = []
# Enable the heavy runtime integration-test harness (tests/integration_roundtrip.rs)
# that drives the REAL in-process lore engine against a temp dir. Off by default so
# the normal fast unit-test job (`cargo test -p lore-vm`) never runs it.
integration-tests = []

[dev-dependencies]
tempfile = "3"
