[package]
name = "lorevm-cli"
description = "Thin JSON CLI over lore-vm's in-process op bindings. The subprocess surface the lore-mcp MCP server drives (git/p4-equivalent ops as `lorevm <domain>.<op> --dir <repo> --args '<json>'`)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "lorevm"
path = "src/main.rs"

[dependencies]
lore-vm = { path = "../lore-vm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
# Integration tests drive the built `lorevm` binary (via CARGO_BIN_EXE_lorevm)
# over a real on-disk .lore repo in a tempdir. No external command-test harness
# (assert_cmd) is pulled in — std::process::Command + serde_json keep the test
# dependency surface minimal and consistent with the rest of the workspace
# (lore-vm's own integration tests use tempfile the same way).
serde_json = { workspace = true }
tempfile = "3"
